# tree-sitter-mermaid

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Brewfile  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORPUS_FORMAT.md  Cargo.toml  DEVELOPMENT_SETUP.md  Dockerfile  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  JOURNEY_TOKEN_CONFLICT.md  LICENSE  Makefile  PRODUCTION_READINESS.md  PUBLISHING.md  Package.resolved  Package.swift  README.md  SECURITY.md  TESTING.md  binding.gyp  check-mermaid-spec.sh  docker-compose.yml  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  shell.nix  test-all-bindings.sh  test_mermaid.rs  tree-sitter-mermaid-0.9.1.tgz  tree-sitter.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: auto-implement.yml  ci-docker.yml  ci.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml
Tests/TreeSitterMermaidTests/: TreeSitterMermaidTests.swift
bindings/c/: tree-sitter-mermaid.h  tree-sitter-mermaid.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: index.js
bindings/rust/: build.rs  lib.rs
docs/: DOCKER.md  PRODUCTION_READINESS.md  README.md  TESTING.md  TREE_SITTER_CLI.md
examples/: basic_usage.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: README.md  architecture.txt  block.txt  c4.txt  er.txt  flow.txt  gantt.txt  gitgraph.txt  journey.txt  pie.txt  (+13 more)
(+6 files in other folders)
