[package]
name = "tree-sitter-mermaid"
description = "Mermaid grammar for the tree-sitter parsing library (version 0.25.10 - matches tree-sitter 0.25.10)"
version = "0.25.10"
keywords = ["incremental", "parsing", "mermaid", "tree-sitter", "diagram"]
categories = ["parsing", "text-editors", "development-tools"]
repository = "https://github.com/mikkihugo/tree-sitter-mermaid"
homepage = "https://github.com/mikkihugo/tree-sitter-mermaid"
documentation = "https://docs.rs/tree-sitter-mermaid"
edition = "2021"
rust-version = "1.70"
license = "MIT"
authors = ["mikkihugo <mhugo@example.com>"]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.25"

[build-dependencies]
cc = "1.0"

[features]
default = ["parser"]
parser = []

# Enable all features for development
[package.metadata.docs.rs]
features = ["parser"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[workspace]

